--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 		<link rel="stylesheet" href="css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
-
 	<body>
-
 		<header>
 			<section class="top-header">
 				<nav>
@@ -16,9 +14,9 @@
 					</div>
 					<ul>
 						<li><a href="">What is that?</a></li>
-						<li><a href="">Lecturers</a></li>
-						<li><a href="">Parking</a></li>
-						<li><a href="">Sign up</a></li>
+						<li><a href="#lectures">Lectures</a></li>
+						<li><a href="#parking">Parking</a></li>
+						<li><a href="#sign-up">Sign up</a></li>
 						<li><a href="">Info</a></li>
 						<li><a href="">About</a></li>
 					</ul>
@@ -28,31 +26,46 @@
 			</section>
 			<section class="main-header">
 				<div>
-					<h2>Development event<br>in good vibes</h2>
-					<p>Talking about the latest technologies<br> and challenges with daily<br> heroes like you</p>
+					<h1>Development event in good vibes</h1>
+					<p>Talking about the latest technologies and challenges with daily heroes like you</p>
 				</div>
 			</section>
 		</header>
-
 		<main>
-			<section class="lecturers">
-				<div class="container">
-					<img src="img/alon.jpg" alt="lecturer">
-					<div class="info">
-						<div class="head">
-							<h1>Materiality in digital world</h1>
-							<p>Ran Liron</p>
-						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero aspernatur unde, vero architecto est provident?</p>
+			<section class="lectures" id="lectures">
+				<div class="main-wrapper">
+					<div class="lectures-head">
+						<h2>Six short gripping lecturers</h2>
+						<p>15 minutes each</p>
 					</div>
-				</div>
-
-				<div class="container">
-						<img src="img/ran.jpg" alt="lecturer">					
+					<hr>
+					<div class="container">
+						<img src="img/alon.jpg" alt="lecturer">
 						<div class="info">
 							<div class="head">
-								<h1>Materiality in digital world.</h1>
+								<h3>Materiality in digital world</h3>
+								<p>Ran Liron</p>
+							</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero aspernatur unde, vero architecto est provident?</p>
+						</div>
+					</div>
+					<div class="container">
+						<img src="img/ran.jpg" alt="lecturer">
+						<div class="info">
+							<div class="head">
+								<h3>Materiality in digital world</h3>
+								<p>Ran Liron</p>
+							</div>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero aspernatur unde, vero architecto est provident?</p>
+						</div>
+					</div>
+					<div class="container">
+						<img src="img/dvir.jpg" alt="lecturer">
+						<div class="info">
+							<div class="head">
+								<h3>Materiality in digital world</h3>
 								<p>Ran Liron</p>
 							</div>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
@@ -60,24 +73,75 @@
 						</div>
 					</div>
 				</div>
+			</section>
+			<section class="parking" id="parking">
+				<div class="main-wrapper">
+					<div class="parking-head">
+						<h2>Where parking?<span>and a few more details</span></h2>
+						<h3>Tonight in the Sublime</h3>
+						<p class="location">Shlomo blvd 53, Tel Aviv</p>
+					</div>
+					<hr>
+					<div class="parking-main">
+						<p>Grouping:<span>18:30</span></p>
+						<p>Starting:<span>19:00</span></p>
+					</div>
+					<hr>
+					<div class="parking-last">
+						<h3>Parking</h3>
+						<hr>
+						<ol>
+							<li>Eli Phelet</li>
+							<li>Alphasi st</li>
+							<li>Haim Ben Atar st</li>
+						</ol>
 
-				<div class="container">
-					<img src="img/dvir.jpg" alt="lecturer">
-					<div class="info">
-						<div class="head">
-							<h1>Materiality in digital world.</h1>
-							<p>Ran Liron</p>
-						</div>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero aspernatur unde, vero architecto est provident?</p>
+						<h3>Buses</h3>
+						<hr>
+						<ol>
+							<li>Central train station - 42, 142</li>
+							<li>Central station - 96, 201, 163</li>
+						</ol>
 					</div>
 				</div>
 			</section>
-		</main>
 
+			<section class="form-data" id="sign-up">
+				<div class="main-wrapper">
+					<div class="form-head">
+						<h2>Signing</h2>
+						<h3>Entrance is free but limited seats.</h3>
+						<p>Please enter you details only if you are really atending to show up.</p>
+					</div>
+					<hr>
+					<p>All of your details remain clssified.</p>
+
+					<form action="" method="get">
+						<label for="name">Name
+							<input id="name" type="text" placeholder="What's your name?">
+						</label>
+						<label for="name">Position
+							<input id="name" type="text" placeholder="Where are you working?">
+						</label>
+						<label for="name">Organization
+							<input id="name" type="text" placeholder="Who pays your money?">
+						</label>
+						<label for="name">Phone
+							<input id="name" type="text" placeholder="Mobile, tel, we dont care">
+						</label>
+						<label for="name">Friends?
+							<input id="name" type="text" placeholder="A lot but i come alone">
+						</label>
+						<input type="submit" value="Send me!">
+					</form>
+				</div>
+			</section>
+
+			<section class="">
+			</section>
+		</main>
 		<footer>
 			<div></div>
 		</footer>
-
 	</body>
 </html>
