--- a/index.html
+++ b/index.html
@@ -32,113 +32,131 @@
 			</section>
 		</header>
 		<main>
-			<section class="lectures" id="lectures">
-				<div class="main-wrapper">
-					<div class="lectures-head">
-						<h2>Six short gripping lecturers</h2>
-						<p>15 minutes each</p>
-					</div>
-					<hr>
-					<div class="container">
-						<img src="img/alon.jpg" alt="lecturer">
-						<div class="info">
-							<div class="head">
-								<h3>Materiality in digital world</h3>
-								<p>Ran Liron</p>
-							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero aspernatur unde, vero architecto est provident?</p>
+		<section class="lectures" id="lectures">
+			<div class="main-wrapper">
+				<div class="lectures-head">
+					<h2>Six short gripping lecturers</h2>
+					<p>15 minutes each</p>
+				</div>
+				<hr>
+				<div class="container">
+					<img src="img/alon.jpg" alt="lecturer">
+					<div class="info">
+						<div class="head">
+							<h3>Materiality in digital world</h3>
+							<p>Ran Liron</p>
 						</div>
-					</div>
-					<div class="container">
-						<img src="img/ran.jpg" alt="lecturer">
-						<div class="info">
-							<div class="head">
-								<h3>Materiality in digital world</h3>
-								<p>Ran Liron</p>
-							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero aspernatur unde, vero architecto est provident?</p>
-						</div>
-					</div>
-					<div class="container">
-						<img src="img/dvir.jpg" alt="lecturer">
-						<div class="info">
-							<div class="head">
-								<h3>Materiality in digital world</h3>
-								<p>Ran Liron</p>
-							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero aspernatur unde, vero architecto est provident?</p>
-						</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero aspernatur unde, vero architecto est provident?</p>
 					</div>
 				</div>
-			</section>
-			<section class="parking" id="parking">
-				<div class="main-wrapper">
-					<div class="parking-head">
-						<h2>Where parking?<span>and a few more details</span></h2>
-						<h3>Tonight in the Sublime</h3>
-						<p class="location">Shlomo blvd 53, Tel Aviv</p>
-					</div>
-					<hr>
-					<div class="parking-main">
-						<p>Grouping:<span>18:30</span></p>
-						<p>Starting:<span>19:00</span></p>
-					</div>
-					<hr>
-					<div class="parking-last">
-						<h3>Parking</h3>
-						<hr>
-						<ol>
-							<li>Eli Phelet</li>
-							<li>Alphasi st</li>
-							<li>Haim Ben Atar st</li>
-						</ol>
-
-						<h3>Buses</h3>
-						<hr>
-						<ol>
-							<li>Central train station - 42, 142</li>
-							<li>Central station - 96, 201, 163</li>
-						</ol>
+				<div class="container">
+					<img src="img/ran.jpg" alt="lecturer">
+					<div class="info">
+						<div class="head">
+							<h3>Materiality in digital world</h3>
+							<p>Ran Liron</p>
+						</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero aspernatur unde, vero architecto est provident?</p>
 					</div>
 				</div>
-			</section>
-
-			<section class="form-data" id="sign-up">
-				<div class="main-wrapper">
-					<div class="form-head">
-						<h2>Signing</h2>
-						<h3>Entrance is free but limited seats.</h3>
-						<p>Please enter you details only if you are really atending to show up.</p>
+				<div class="container">
+					<img src="img/dvir.jpg" alt="lecturer">
+					<div class="info">
+						<div class="head">
+							<h3>Materiality in digital world</h3>
+							<p>Ran Liron</p>
+						</div>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima sed officiis veritatis facere accusantium, nemo!.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero aspernatur unde, vero architecto est provident?</p>
 					</div>
-					<hr>
-					<p>All of your details remain clssified.</p>
-
-					<form action="" method="get">
-						<label for="name">Name
-							<input id="name" type="text" placeholder="What's your name?">
-						</label>
-						<label for="name">Position
-							<input id="name" type="text" placeholder="Where are you working?">
-						</label>
-						<label for="name">Organization
-							<input id="name" type="text" placeholder="Who pays your money?">
-						</label>
-						<label for="name">Phone
-							<input id="name" type="text" placeholder="Mobile, tel, we dont care">
-						</label>
-						<label for="name">Friends?
-							<input id="name" type="text" placeholder="A lot but i come alone">
-						</label>
-						<input type="submit" value="Send me!">
-					</form>
 				</div>
-			</section>
+			</div>
+		</section>
+		<section class="parking" id="parking">
+			<div class="main-wrapper">
+				<div class="parking-head">
+					<h2>Where parking?<span>and a few more details</span></h2>
+					<h3>Tonight in the Sublime</h3>
+					<p class="location">Shlomo blvd 53, Tel Aviv</p>
+				</div>
+				<hr>
+				<div class="parking-main">
+					<p>Grouping:<span>18:30</span></p>
+					<p>Starting:<span>19:00</span></p>
+				</div>
+				<hr>
+				<div class="parking-last">
+					<h3>Parking</h3>
+					<hr>
+					<ol>
+						<li>Eli Phelet</li>
+						<li>Alphasi st</li>
+						<li>Haim Ben Atar st</li>
+					</ol>
+					<h3>Buses</h3>
+					<hr>
+					<ol>
+						<li>Central train station - 42, 142</li>
+						<li>Central station - 96, 201, 163</li>
+					</ol>
+				</div>
+			</div>
+		</section>
+		<section class="form-data" id="sign-up">
+			<div class="main-wrapper">
+				<div class="form-head">
+					<h2>Signing</h2>
+					<h3>Entrance is free but limited seats.</h3>
+					<p>Please enter you details only if you are really atending to show up.</p>
+				</div>
+				<hr>
+				<p>All of your details remain clssified.</p>
+				<form action="" method="get">
+					<label for="name">Name
+						<input id="name" type="text" placeholder="What's your name?">
+					</label>
+					<label for="name">Position
+						<input id="name" type="text" placeholder="Where are you working?">
+					</label>
+					<label for="name">Organization
+						<input id="name" type="text" placeholder="Who pays your money?">
+					</label>
+					<label for="name">Phone
+						<input id="name" type="text" placeholder="Mobile, tel, we dont care">
+					</label>
+					<label for="name">Friends?
+						<input id="name" type="text" placeholder="A lot but i come alone">
+					</label>
+					<input type="submit" value="Send me!">
+				</form>
+			</div>
+		</section>
+		<section class="reference">
+			<div class="main-wrapper">
+				<div class="reference-head">
+					<h2>Usefull-Information</h2>
+				</div>
+				<div class="reference-main">
+					<figure>
+						<img src="img/alon.jpg" alt="site">
+						<figcation>
+							<h3>HTML5</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+						</figcation>
+					</figure>
 
-			<section class="">
-			</section>
+					<figure>
+						<img src="img/ran.jpg" alt="site">
+						<figcation>
+							<h3>HTML5</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+						</figcation>
+					</figure>
+				</div>
+			</div>
+		</section>
 		</main>
 		<footer>
 			<div></div>
