--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header>
-			<section class="top-header">
+			<section class="header-top" id="top">
 				<nav>
 					<div class="hamburger">
 						<div class="floor"></div>
@@ -17,14 +17,14 @@
 						<li><a href="#lectures">Lectures</a></li>
 						<li><a href="#parking">Parking</a></li>
 						<li><a href="#sign-up">Sign up</a></li>
-						<li><a href="">Info</a></li>
-						<li><a href="">About</a></li>
+						<li><a href="#reference">Usefull Info</a></li>
+						<li><a href="#about">About</a></li>
 					</ul>
 				</nav>
 				<h1>Dev Shots | developers</h1>
 				<a class="logo" href=""><img src="img/logo.svg" alt="Netcraft logo"></a>
 			</section>
-			<section class="main-header">
+			<section class="header-main">
 				<div>
 					<h1>Development event in good vibes</h1>
 					<p>Talking about the latest technologies and challenges with daily heroes like you</p>
@@ -109,7 +109,7 @@
 				<div class="form-head">
 					<h2>Signing</h2>
 					<h3>Entrance is free but limited seats.</h3>
-					<p>Please enter you details only if you are really atending to show up.</p>
+					<p>Please enter your details only if you are really atending to show up.</p>
 				</div>
 				<hr>
 				<p>All of your details remain clssified.</p>
@@ -133,33 +133,53 @@
 				</form>
 			</div>
 		</section>
-		<section class="reference">
+		<section class="reference" id="reference">
 			<div class="main-wrapper">
 				<div class="reference-head">
 					<h2>Usefull-Information</h2>
 				</div>
 				<div class="reference-main">
 					<figure>
-						<img src="img/alon.jpg" alt="site">
-						<figcation>
-							<h3>HTML5</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
-						</figcation>
+						<img src="img/html5Logo.png" alt="site">
+						<figcaption>
+						<h3>HTML5 course</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+						</figcaption>
 					</figure>
-
 					<figure>
 						<img src="img/ran.jpg" alt="site">
-						<figcation>
-							<h3>HTML5</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
-						</figcation>
+						<figcaption>
+						<h3>HTML5 course</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="img/alon.jpg" alt="site">
+						<figcaption>
+						<h3>HTML5 course</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+						</figcaption>
+					</figure>
+					<figure>
+						<img src="img/ran.jpg" alt="site">
+						<figcaption>
+						<h3>HTML5 course</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+						</figcaption>
 					</figure>
 				</div>
 			</div>
 		</section>
 		</main>
-		<footer>
-			<div></div>
+		<footer id="about">
+			<section class="footer-top">
+					<h2>About us</h2>
+			</section>
+			<section class="footer-main">
+					<a href=""><img src="img/logo.svg" alt="Netcraft logo"></a>
+					<a class="back-top" href="#top"><img src="img/top.png" alt="back_to_top"></a>
+			</section>
+			
 		</footer>
 	</body>
 </html>
