--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<section class="header-top" id="top">
-				<a class="logo" href=""><img src="img/logo.svg" alt="Netcraft logo"></a>
+				<a class="logo" href=""><img src="img/icons/logo.svg" alt="Netcraft logo"></a>
 				<h1>DevShots | Developers</h1>
 				<nav>
 					<div class="hamburger">
@@ -31,7 +31,7 @@
 					<h1>Development event<br> in good vibes</h1>
 					<p>Talking about the latest technologies<br> and challenges with daily<br> heroes like you</p>
 				</div>
-				<img src="img/sitting.png" alt="">
+				<img src="img/icons/sitting.png" alt="">
 			</section>
 		</header>
 		<main>
@@ -44,7 +44,7 @@
 				<hr>
 				<div class="lectures-main">
 					<div class="container">
-						<img src="img/alon.jpg" alt="lecturer">
+						<img src="img/lectures/alon.jpg" alt="lecturer">
 						<div class="info">
 							<div class="head">
 								<h3>Materiality in digital world</h3>
@@ -55,7 +55,7 @@
 						</div>
 					</div>
 					<div class="container">
-						<img src="img/ran.jpg" alt="lecturer">
+						<img src="img/lectures/ran.jpg" alt="lecturer">
 						<div class="info">
 							<div class="head">
 								<h3>Materiality in digital world</h3>
@@ -66,7 +66,7 @@
 						</div>
 					</div>
 					<div class="container">
-						<img src="img/dvir.jpg" alt="lecturer">
+						<img src="img/lectures/dvir.jpg" alt="lecturer">
 						<div class="info">
 							<div class="head">
 								<h3>Materiality in digital world</h3>
@@ -152,28 +152,28 @@
 				</div>
 				<div class="reference-main">
 					<figure>
-						<img src="img/html5Logo.png" alt="site">
+						<img src="img/icons/html5Logo.png" alt="site">
 						<figcaption>
 						<h3>HTML5 course</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
 						</figcaption>
 					</figure>
 					<figure>
-						<img src="img/navigateLogo.png" alt="site">
+						<img src="img/icons/navigateLogo.png" alt="site">
 						<figcaption>
 						<h3>Learning UX</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
 						</figcaption>
 					</figure>
 					<figure>
-						<img src="img/cssLogo.png" alt="site">
+						<img src="img/icons/cssLogo.png" alt="site">
 						<figcaption>
 						<h3>JS course</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
 						</figcaption>
 					</figure>
 					<figure>
-						<img src="img/blogLogo.png" alt="site">
+						<img src="img/icons/blogLogo.png" alt="site">
 						<figcaption>
 						<h3>Netcraft blog</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
@@ -188,8 +188,8 @@
 					<h2>About us</h2>
 			</section>
 			<section class="footer-main">
-					<a class="logo-footer" href=""><img src="img/logo.svg" alt="Netcraft logo"></a>
-					<a class="back-top" href="#top"><img src="img/top.png" alt="back_to_top"></a>
+					<a class="logo-footer" href=""><img src="img/icons/logo.svg" alt="Netcraft logo"></a>
+					<a class="back-top" href="#top"><img src="img/icons/top.png" alt="back_to_top"></a>
 			</section>			
 		</footer>
 	</body>
