--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<h1>Development event<br> in good vibes</h1>
 					<p>Talking about the latest technologies<br> and challenges with daily<br> heroes like you</p>
 				</div>
-				<img src="img/icons/sitting.png" alt="">
+				<img class="robot" src="img/icons/robot.png" alt="robot">
 			</section>
 		</header>
 		<main>
@@ -115,6 +115,8 @@
 				</div>
 				<div class="box"></div>
 			</div>
+			<img class="robot-car" src="img/icons/robot-car.png" alt="car robot">
+			<img class="robot-2" src="img/icons/robot-2.png" alt="robot">
 		</section>
 		<section class="form-data" id="sign-up">
 			<div class="main-wrapper">
