--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
 				<p>All of your details remain clssified.</p>
 				<form action="" method="get">
 					<label for="name">Name
-						<input id="name" type="text" placeholder="What's your name?">
+						<input id="name" type="text" name="userName" placeholder="What's your name?">
 					</label>
-					<label for="name">Position
-						<input id="name" type="text" placeholder="Where are you working?">
+					<label for="position">Position
+						<input id="position" type="text" name="position" placeholder="Where are you working?">
 					</label>
-					<label for="name">Organization
-						<input id="name" type="text" placeholder="Who pays your money?">
+					<label for="organization">Organization
+						<input id="organization" type="text" name="organization" placeholder="Who pays your money?">
 					</label>
-					<label for="name">Phone
-						<input id="name" type="text" placeholder="Mobile, tel, we dont care">
+					<label for="phone">Phone
+						<input id="phone" type="text" name="phone" placeholder="Mobile, tel, we dont care">
 					</label>
-					<label for="name">Friends?
-						<input id="name" type="text" placeholder="A lot but i come alone">
+					<label for="friends">Friends?
+						<input id="friends" type="text" name="friends" placeholder="A lot but i come alone">
 					</label>
 					<input type="submit" value="Send me!">
 				</form>
