--- a/index.html
+++ b/index.html
@@ -153,34 +153,67 @@
 					<h2>Usefull-Information</h2>
 				</div>
 				<div class="reference-main">
-					<figure>
-						<img src="img/icons/html5Logo.png" alt="site">
-						<figcaption>
-						<h3>HTML5 course</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
-						</figcaption>
-					</figure>
-					<figure>
-						<img src="img/icons/navigateLogo.png" alt="site">
-						<figcaption>
-						<h3>Learning UX</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
-						</figcaption>
-					</figure>
-					<figure>
-						<img src="img/icons/cssLogo.png" alt="site">
-						<figcaption>
-						<h3>JS course</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
-						</figcaption>
-					</figure>
-					<figure>
-						<img src="img/icons/blogLogo.png" alt="site">
-						<figcaption>
-						<h3>Netcraft blog</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
-						</figcaption>
-					</figure>
+					<div>	
+						<figure>
+							<img src="img/icons/html5Logo.png" alt="site">
+							<figcaption>
+							<h3>HTML5 course</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+							</figcaption>
+						</figure>
+						<figure>
+							<img src="img/icons/navigateLogo.png" alt="site">
+							<figcaption>
+							<h3>Learning UX</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+							</figcaption>
+						</figure>
+						<figure>
+							<img src="img/icons/cssLogo.png" alt="site">
+							<figcaption>
+							<h3>JS course</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+							</figcaption>
+						</figure>
+						<figure>
+							<img src="img/icons/blogLogo.png" alt="site">
+							<figcaption>
+							<h3>Netcraft blog</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+							</figcaption>
+						</figure>
+					</div>
+					<hr>
+					<div>
+						<figure>
+							<img src="img/icons/html5Logo.png" alt="site">
+							<figcaption>
+							<h3>HTML5 course</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+							</figcaption>
+						</figure>
+						<figure>
+							<img src="img/icons/navigateLogo.png" alt="site">
+							<figcaption>
+							<h3>Learning UX</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+							</figcaption>
+						</figure>
+						<figure>
+							<img src="img/icons/cssLogo.png" alt="site">
+							<figcaption>
+							<h3>JS course</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+							</figcaption>
+						</figure>
+						<figure>
+							<img src="img/icons/blogLogo.png" alt="site">
+							<figcaption>
+							<h3>Netcraft blog</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, consectetur.</p>
+							</figcaption>
+						</figure>
+					</div>
 				</div>
 			</div>
 		</section>
