--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<hr>
 				<div class="lectures-main">
 					<div class="container">
-						<img src="img/lectures/alon.jpg" alt="lecturer">
+						<img src="img/lectures/lecturer.png" alt="lecturer">
 						<div class="info">
 							<div class="head">
 								<h3>Materiality in digital world</h3>
@@ -55,7 +55,7 @@
 						</div>
 					</div>
 					<div class="container">
-						<img src="img/lectures/ran.jpg" alt="lecturer">
+						<img src="img/lectures/lecturer.png" alt="lecturer">
 						<div class="info">
 							<div class="head">
 								<h3>Materiality in digital world</h3>
@@ -66,7 +66,7 @@
 						</div>
 					</div>
 					<div class="container">
-						<img src="img/lectures/dvir.jpg" alt="lecturer">
+						<img src="img/lectures/lecturer.png" alt="lecturer">
 						<div class="info">
 							<div class="head">
 								<h3>Materiality in digital world</h3>
@@ -113,10 +113,10 @@
 						</div>
 					</div>
 				</div>
+				<div class="waze"></div>
 				<div class="box"></div>
 			</div>
-			<img class="robot-car" src="img/icons/robot-car.png" alt="car robot">
-			<img class="robot-2" src="img/icons/robot-2.png" alt="robot">
+			<img class="robot-car" src="img/icons/robot-wheels.png" alt="car robot">
 		</section>
 		<section class="form-data" id="sign-up">
 			<div class="main-wrapper">
@@ -221,6 +221,7 @@
 		<footer id="about">
 			<section class="footer-top">
 					<h2>About us</h2>
+					<img class="hi-robot" src="img/icons/robot-3.png" alt="little-robot">
 			</section>
 			<section class="footer-main">
 					<a class="logo-footer" href=""><img src="img/icons/logo.svg" alt="Netcraft logo"></a>
